2009-07-28  Ozkan Sezer  <sezeroz@gmail.com>

	* misc/fwide.c, misc/mbsinit.c, misc/wmemchr.c, misc/wmemcmp.c,
	misc/wmemcpy.c, misc/wmemmove.c, misc/wmemset.c:  Copied over code
	from the inline versions in wchar.h.

2009-07-28  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/readcr0.c: New.
	* Makefile.am: Added intrincs/readcr0.c to the build.
	* Makefile.in: Regenerated.

2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/ilockcxch.c (_InterlockedCompareExchange): Renamed from
	InterlockedCompareExchange. Provide InterlockedCompareExchange as an
	alias to _InterlockedCompareExchange.
	* intrincs/ilockexch.c (_InterlockedExchange): Renamed from
	InterlockedExchange. Provide InterlockedExchange as an alias to
	_InterlockedExchange.
	* intrincs/ilockcxch_.c, intrincs/ilockexch_.c: Removed.
	* Makefile.am: Removed intrincs/ilockcxch_.c and intrincs/ilockexch_.c
	from the build.
	* Makefile.in: Regenerated.

2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/*: Define __CRT__NO_INLINE before the includes to prevent
	declaration mismatches.

2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>

	* libsrc/ws2tcpip.c: New. Add function implementations of inline
	version in ws2tcpip.h.
	* Makefile.am: Added libsrc/ws2tcpip.c to libws2_32.a.
	* Makefile.in: Regenerated.
	* libsrc/wspiapi.c: Define WIN32_LEAN_AND_MEAN before includes. 
	Undef __CRT__NO_INLINE before defining it.

2009-07-27  Kai Tietz  <kai.tietz@onevision.com>

	* libsrc/wspiapi.c: Add function implementations of inline
	version in wspiapi.h

2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>

	misc/
	* fwide.c, mbsinit.c, wmemchr.c, wmemcmp.c, wmemcpy.c, wmemmove.c, wmemset.c:
	Define __CRT__NO_INLINE before the includes to prevent declaration mismatches.
	FIXME: The functions are #if 0'ed out in all of these sources, so we don't have
	their non-inlined versions in libmingwex.a.
	FIXME-2: We also don't have non-inlined versions of several other functions
	in libmingwex.a, either. To be looked into...
