@@ -2,6 +2,7 @@
 
 	* conio.h (readcr0): Provided proper w32 and w64 versions.
 	* wchar.h (fwide, mbsinit): Provide prototypes for non-inline cases.
+	(wmemchr, wmemcmp): Added NULL pointer checks.
 
 2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>
 
