@@ -1,5 +1,10 @@
 2009-07-28  Ozkan Sezer  <sezeroz@gmail.com>
 
+	* misc/wmemchr.c: Added NULL pointer checks.
+	* misc/wmemcmp.c: Likewise.
+
+2009-07-28  Ozkan Sezer  <sezeroz@gmail.com>
+
 	* misc/fwide.c, misc/mbsinit.c, misc/wmemchr.c, misc/wmemcmp.c,
 	misc/wmemcpy.c, misc/wmemmove.c, misc/wmemset.c:  Copied over code
 	from the inline versions in wchar.h.
